apps/aviary/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: aviary
  namespace: aviary
spec:
  selector:
    app.kubernetes.io/name: aviary
  ports:
    - name: http
      port: 3000
      targetPort: http
