apps/aviary/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aviary
  namespace: aviary
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    external-dns.alpha.kubernetes.io/target: f4f59044-cc55-41f0-a76a-96fdfeb42dc9.cfargotunnel.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: aviary.jensvanzutphen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aviary
                port:
                  number: 3000
  tls:
    - hosts:
        - aviary.jensvanzutphen.com
      secretName: aviary-tls
